# tmpr

./: .gitignore  pyproject.toml  requirements-npu.txt
configs/: deepspeed_zero2.json
scripts/: download_hiertext.sh  download_model.py  evaluate_pointer_predictions.py  export_hiertext_jsonl.py  filter_hiertext_jsonl_by_lines.py  filter_hiertext_jsonl_max300.sh  generate_hiertext_predictions.py  preview_hiertext_prompts.py  train_hiertext_paragraphs.py  visualize_hiertext_polygons.py
scripts/experiments/: README.md  common_train_params.sh  test_bbox_2d.sh  test_poly_mlp.sh  test_poly_mlp_det.sh  test_poly_transformer.sh  test_poly_transformer_det.sh  train_bbox_2d.sh  train_poly_mlp.sh  train_poly_mlp_det.sh  train_poly_mlp_stage1_encoder.sh  train_poly_mlp_stage2_lora.sh  train_poly_transformer.sh  train_poly_transformer_det.sh  train_poly_transformer_stage1_encoder.sh  train_poly_transformer_stage2_lora.sh
src/polygon_qwen/: __init__.py  device.py  geometry.py  hiertext.py  metrics.py  modeling.py  processor.py
